<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE"
    android:orientation="vertical" >
	
   
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp" 
        android:background="#DDD">
        
	    <LinearLayout
        android:layout_width="45dp"
        android:layout_height="match_parent" 
        android:background="@drawable/inner">
    	</LinearLayout>
        
	    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            
            android:text="宿舍管理系统" 
            android:gravity="center_vertical"
            android:textColor="#000"
            android:textSize="17sp"/>
	    
	    
	    
	    
	    
	</LinearLayout>
    
    
    
    <LinearLayout 
        android:layout_height="18dp"
        android:layout_width="match_parent"
        >
    </LinearLayout>
    
    <LinearLayout 
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#FFF">
        <TextView 
            android:id="@+id/safeagreement"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/safeAgreement"/>
        
    </LinearLayout>
    <LinearLayout 
        android:layout_height="1dp"
        android:layout_width="match_parent"
        >
    </LinearLayout>
    <LinearLayout 
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#FFF">
        <TextView 
            android:id="@+id/Feedback"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/feedback"/>
        
    </LinearLayout>
    <LinearLayout 
        android:layout_height="18dp"
        android:layout_width="match_parent"
        >
    </LinearLayout>
    <LinearLayout 
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#FFF">
        <TextView 
            android:id="@+id/AboutUS"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/aboutus"/>
        
    </LinearLayout>
    
    
    
    
    
    
    
   
</LinearLayout>